# override_package_non_leaf

./: README.md
overlay/src/a/: CMakeLists.txt  a-config.cmake.in
overlay/src/c/: CMakeLists.txt
underlay/src/a/: CMakeLists.txt
underlay/src/b/: CMakeLists.txt  b-config.cmake.in
